--- a/jxwebsite-frontend/package.json
+++ b/jxwebsite-frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "animate.css": "^4.1.1",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "react": "^18.3.1",
