--- a/jxwebsite-frontend/package.json
+++ b/jxwebsite-frontend/package.json
@@ -16,8 +16,10 @@
     "animate.css": "^4.1.1",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
