--- a/jxwebsite-frontend/package.json
+++ b/jxwebsite-frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/sanitize-html": "^2.13.0",
     "animate.css": "^4.1.1",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
@@ -20,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "sanitize-html": "^2.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
