--- a/jxwebsite-frontend/package.json
+++ b/jxwebsite-frontend/package.json
@@ -20,6 +20,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal-image": "^2.6.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "sanitize-html": "^2.14.0",
@@ -29,6 +30,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-modal-image": "^2.6.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
